# GameOfLife

code/: GameOfLife.cpp  GameOfLife.hpp
docs/: License.md  Readme.md  readme.md
envi/: CMakeLists.txt  clang-format.yaml
